@@ -360,6 +360,7 @@ dependencies {
   testCompile "org.junit.vintage:junit-vintage-engine:${versions.junit}"
 
   testCompile group: 'pl.pojo', name: 'pojo-tester', version: '0.7.6'
+  testCompile 'com.github.hmcts:fortify-client:1.2.1:all'
 
   //Pact contract testing
   contractTestCompile group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pactVersion
@@ -422,6 +423,12 @@ task runProviderPactVerification(type: Test) {
   classpath = sourceSets.contractTest.runtimeClasspath
   systemProperty 'pact.verifier.publishResults', System.getProperty('pact.verifier.publishResults')
   systemProperty 'pact.provider.version', project.pacticipantVersion
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 runProviderPactVerification.dependsOn contract
